# WikiBrain

./: .gitattributes  .gitignore  AGENTS.md  BUILD_SPEC.md  CLAUDE.md  LICENSE  README.md  SCHEMA.md  config.example.toml  wiki.cmd  wiki.ps1
.claude/: settings.json
.claude/hooks/: session_end.py
.claude/skills/wiki-maintainer/: SKILL.md  capture.md  gather.md  maintain.md  query.md  skills.md
.github/workflows/: ci.yml
cli/: pyproject.toml
cli/brainconnect/: cli.py  delegate.py  delegate_clients.py  recall.py  registry.py  roles.py  server.py  trust.py
cli/brainconnect/okf/: __init__.py  adapter.py  export.py  okfimport.py
cli/librarian/: cli.py  client.py  config.py  maintain.py  watch.py
cli/wiki/: __init__.py  api.py  candidates.py  cli.py  config.py  db.py  drop.py  embed.py  entities.py  evidence.py  extract.py  fetch.py  gate.py  gather.py  guard_hook.py  health.py  ingest.py  lint.py  mcp_server.py  migrate.py  queue.py  recall.py  render.py  review.py  schema.py  search.py  skills.py  util.py
cli/wiki/safety/: __init__.py  configuration.py  models.py  normalize.py  pipeline.py  policies.py  redaction.py  registry.py
cli/wiki/safety/baseline/: __init__.py  encoding.py  pii.py  prompt_injection.py  secrets.py  tool_instructions.py
cli/wiki/safety/engines/: __init__.py  base.py  baseline.py  detect_secrets.py  gitleaks.py  presidio.py  prompt_guard.py  trufflehog.py
docs/: CONTRACT.md  INTEGRATIONS.md  LEDGER_SPEC.md  OKF.md  OPERATIONS.md  ORCHESTRATION.md  REGISTRY.md  SAFETY.md  STATUS.md
docs/adr/: 0001-service-concurrency-and-projections.md  0002-backup-restore.md  0003-source-ingestion-deferred.md  0006-okf-import.md  0008-orchestration-boundary.md
scripts/: mechanical-maintain.ps1  okf_import_demo.py
tests/: acceptance.py  contract_cases.py
