[project]
name = "wiki-brain-cli"
version = "0.2.0"
description = "Pure-code CLI for the wiki-brain LLM memory system (no model calls)"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "trafilatura>=1.6",
]

# Optional extras — each is import-guarded in code so the core CLI runs without
# them. All are local + key-free (no billable LLM calls, no API keys), keeping
# the project's "zero model calls in the CLI" boundary intact.
[project.optional-dependencies]
search = ["ddgs>=6"]                                            # robust DuckDuckGo (scrape fallback if absent)
docs = ["docling>=2.0", "rapidocr>=2", "onnxruntime>=1.17", "pillow>=10", "pytesseract>=0.3.10"]  # PDF/DOCX + image OCR (RapidOCR, no system binary; Tesseract optional)
media = ["youtube-transcript-api>=0.6"]                         # video captions
whisper = ["faster-whisper>=1.0"]                               # local ASR (needs ffmpeg)
semantic = ["sentence-transformers>=3", "numpy>=1.26"]          # local embeddings
mcp = ["mcp>=1.2"]                                             # expose the brain as an MCP server (no API key, no model call)
watch = ["watchdog>=4"]                                         # responsive `wiki-librarian watch`; stdlib poll fallback if absent

# Memory-safety detection engines (docs/SAFETY.md). WikiBrain owns the policy; these
# are the optional engines that do the detecting. The built-in `baseline` engine is
# pure stdlib and needs none of them, so a default install stays lightweight and
# scans offline. Each engine reports itself `unavailable` — never "clean" — when its
# dependency is absent.
safety-secrets = ["detect-secrets>=1.5"]                        # entropy + maintained plugin set
safety-pii = ["presidio-analyzer>=2.2"]                         # needs a spaCy model: `python -m spacy download en_core_web_lg`
safety-injection = ["transformers>=4.40", "torch>=2.0"]         # local pinned classifier, CPU is fine
safety-all = ["detect-secrets>=1.5", "presidio-analyzer>=2.2", "transformers>=4.40", "torch>=2.0"]
# TruffleHog and Gitleaks are separately-installed executables, not Python packages;
# there is no extra for them. They are found on PATH and run as subprocesses.

[project.scripts]
wiki = "wiki.cli:main"
# The librarian is the model-BEARING half — a separate console script and a
# separate process, so `wiki` above keeps its zero-model-call guarantee. It
# speaks the OpenAI-compatible chat API over stdlib http, so it has no required
# dependency; configure an endpoint (local Ollama/LM Studio or a hosted key) in
# [librarian] in config.toml.
wiki-librarian = "librarian.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Subpackages must be listed explicitly: setuptools does not recurse into a plain
# `packages` list, so `wiki.backends` was silently absent from every wheel built
# before this line existed.
packages = [
    "wiki", "wiki.backends", "wiki.safety", "wiki.safety.baseline",
    "wiki.safety.engines", "librarian",
]

# Scoped conservatively: real-bug rules only (unused imports/names, undefined
# names, syntax errors). No broad style rules — this project's style is
# hand-set and shouldn't churn to satisfy a linter.
[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E9"]
